# lala

./: .gitignore  Makefile  README.md  pyproject.toml
deployments/: .env.plain  Dockerfile.cpu  Dockerfile.gpu  docker-compose.build.yaml  docker-compose.local.yaml  docker-compose.server.yaml
docs/lala/: bruno.json  chat.bru
docs/lala/environments/: main.bru
src/lala/: llamacpp.py  main.py  vllms.py
tests/: bench_lala.py
